feat(api): corrige depreciação e implementa paginação
