# app/controllers/circles_controller.rb
@@ -4,9 +4,10 @@ class CirclesController < ApplicationController
   before_action :set_circle, only: %i[update destroy]
   before_action :set_frame, only: :create
 
-  # GET /circles?center_x=X&center_y=Y&radius=R&frame_id=ID
+  # GET /circles?center_x=X&center_y=Y&radius=R&frame_id=ID&page=1&per_page=25
   def index
     circles = Circles::FilterService.call(params)
+    add_pagination_headers(circles)
     render json: circles, each_serializer: CircleSerializer
   rescue MissingParametersError => e
     render json: { error: e.message }, status: :bad_request
@@ -19,7 +20,7 @@ class CirclesController < ApplicationController
     if @circle.persisted?
       render json: @circle, serializer: CircleSerializer, status: :created
     else
-      render json: { errors: @circle.errors }, status: :unprocessable_entity
+      render json: { errors: @circle.errors }, status: :unprocessable_content
     end
   end
 
@@ -30,7 +31,7 @@ class CirclesController < ApplicationController
     if circle.errors.empty?
       render json: circle, serializer: CircleSerializer
     else
-      render json: { errors: circle.errors }, status: :unprocessable_entity
+      render json: { errors: circle.errors }, status: :unprocessable_content
     end
   end
 
@@ -56,5 +57,12 @@ class CirclesController < ApplicationController
 
   def circle_params
     params.require(:circle).permit(:x_axis, :y_axis, :diameter)
+  end
+
+  def add_pagination_headers(collection)
+    response.headers['X-Total-Count'] = collection.total_count.to_s
+    response.headers['X-Total-Pages'] = collection.total_pages.to_s
+    response.headers['X-Current-Page'] = collection.current_page.to_s
+    response.headers['X-Per-Page'] = collection.limit_value.to_s
   end
 end
